# django-tenants-rls

./: .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: install.rst
dts_test_project/dts_test_app/: models.py
dts_test_project/dts_test_app/migrations/: 0001_initial.py  0002_test_drop_unique.py  0003_test_add_db_index.py  0004_test_alter_unique.py
dts_test_project/dts_test_project/: settings.py
examples/tenant_tutorial/customers/: models.py
examples/tenant_tutorial/customers/migrations/: 0001_initial.py
examples/tenant_tutorial/templates/: index_public.html
tenant_schemas/: apps.py  constrains.py  fields.py  middleware.py  models.py  routers.py  urlresolvers.py  utils.py
tenant_schemas/contrib/drf/: serializers.py  utils.py
tenant_schemas/management/commands/: __init__.py  create_stable_tenant_function.py  tenant_command.py
tenant_schemas/migration_executors/: __init__.py  async.py  base.py  celery.py
tenant_schemas/postgresql_backend/: base.py  introspection.py  schema.py
tenant_schemas/test/: cases.py  client.py
tenant_schemas/tests/: __init__.py  models.py  test_routes.py  test_tenants.py  testcases.py
