[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tenants-rls"
authors = [
    {name = "Bernardo Pires Carneiro", email = "carneiro.be@gmail.com"},
    {name = "Txerpa Team", email = "info@txerpa.com"},
]
description = "Tenant support for Django using PostgreSQL RLS."
requires-python = ">=3.8"
keywords = ["django", "python", "tenants", "postgres", "rls"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    'Django>=3.0',
    'psycopg2',
    'djangorestframework>=3.11.2',
    'djangorestframework-jsonapi>=3.1.0'
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["tenant_schemas"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = ["README.rst", ]}